--- a/Policy/广告管理条例.md
+++ b/Policy/广告管理条例.md
@@ -2,7 +2,9 @@
 
 ## 总则
 
-1. 每人每天广告字数不得超过1000字，每多空一行算20字
-2. 不同人发布相同广告的，按总字数计算入发布的每个群成员
-3. 其他形式发布广告的，按广告总字数计算
-4. 最终解释权归本群管理员所有
+1. 每人每天广告字数不得超过1000字符，每多空一行算20字符
+2. 不同人发布相同广告的，按总字数符计算入发布的每个群成员
+3. 发布图片广告的，按20字符+图片内总字符数算
+4. 宣传群聊的，按50字符算
+5. 其他形式发布广告的，按广告总字符数计算
+6. 最终解释权归本群管理员所有
