--- a/Policy/成员移除名单.md
+++ b/Policy/成员移除名单.md
@@ -1,8 +1,7 @@
 # 移除群成员名单
 <a name="yCChW"></a>
 ## 群成员不活跃超过一年
-
-- 天边的生活(617572652) - stale 2023.07.25
+无
 <a name="F9RQb"></a>
 ## 豁免群成员
 
@@ -16,6 +15,7 @@
 - Kula同学(2424915207)
 - ZLEqpy(473305170)
 - 潇何(1176311200)
+- 天边的生活(617572652)
 <a name="bUIsR"></a>
 ## 提示
 1. 被标记的群成员自标记之日起，7天内没有消息或请求撤销标记，可能会被群管请出群
