--- a/Policy/群规委员会公投制度.md
+++ b/Policy/群规委员会公投制度.md
@@ -25,4 +25,4 @@
 4. 群规委员会（一名管理员 与 一名联合管理员/两名群规委员会成员）同意后可撤回公投
 5. 如果赞成票与反对票未超过，则此公投被搁置
 6. 公投必须明确说明发起人、原因、事由
-7. 允许编程猫其他一个群聊参与公投
+7. 允许编程猫其他群聊（只能有一个群聊参与）参与公投
